--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Weather app</h1>
 
     <footer>Created by 
-        <a href="https://github.com/aamabry" >Audrey Mabry</a> and is on <a href="https://github.com/aamabry/nice-weather-app">GitHub </a> and is <a href="https://audreymabry-weather-app.netlify.app/"> hosted on Netlify.</a>/footer>
+        <a href="https://github.com/aamabry" >Audrey Mabry</a> and is on <a href="https://github.com/aamabry/nice-weather-app">GitHub </a> and is <a href="https://audreymabry-weather-app.netlify.app/"> hosted on Netlify.</a></footer>
 </body>
 </html>
