--- a/index.html
+++ b/index.html
@@ -6,9 +6,20 @@
     <title>Weather App</title>
 </head>
 <body>
-    <h1>Weather app</h1>
+    <div>
+        <header>
+            <form id="search-form">
+                <input type="search"
+                placeholder="Enter a city..."
+                required/>
+            </form>
+            <input type="submit" value="Search"/>
+        </header>
+    </div>
 
     <footer>Created by 
-        <a href="https://github.com/aamabry" >Audrey Mabry</a> and is on <a href="https://github.com/aamabry/nice-weather-app">GitHub </a> and is <a href="https://audreymabry-weather-app.netlify.app/"> hosted on Netlify.</a></footer>
+        <a href="https://github.com/aamabry" target="_blank" >Audrey Mabry
+        </a> and is on <a href="https://github.com/aamabry/nice-weather-app" target="_blank">GitHub
+        </a> and is <a href="https://audreymabry-weather-app.netlify.app/" target="_blank"> hosted on Netlify.</a></footer>
 </body>
 </html>
