--- a/index.html
+++ b/index.html
@@ -6,20 +6,43 @@
     <title>Weather App</title>
 </head>
 <body>
-    <div>
+    <div class-="weather-app">
         <header>
             <form id="search-form">
-                <input type="search"
+                <input 
+                type="search"
                 placeholder="Enter a city..."
-                required/>
+                required
+                class="search-input"
+                id="search-input"/>
             </form>
-            <input type="submit" value="Search"/>
+            <input 
+            type="submit" 
+            value="Search"
+            class="search-button"/>
+        </form>
         </header>
-    </div>
-
+        <main>
+            <div class="current-weather">
+                <div>
+                    <h1 class="current-city" id="current-city">New York</h1>
+                    <p class="current-details">
+                        <span id="current-date"></span>, sunny
+                        <br />
+                        Humidity: <strong>41%</strong>, Wind: <strong>3mp/h</strong>
+                    </p>
+                </div>
+                <div class="current-temperature">
+                    <span class="current-temperature-icon">🌞</span>
+                    <span class="current-temperature" id="api-temperature">66</span>
+                    <span class="current-temperature-unit">°F</span>
+                </div>
+            </div>
+        </main>
     <footer>Created by 
         <a href="https://github.com/aamabry" target="_blank" >Audrey Mabry
         </a> and is on <a href="https://github.com/aamabry/nice-weather-app" target="_blank">GitHub
         </a> and is <a href="https://audreymabry-weather-app.netlify.app/" target="_blank"> hosted on Netlify.</a></footer>
+    </div>
 </body>
 </html>
