--- a/index.html
+++ b/index.html
@@ -43,10 +43,14 @@
                 </div>
             </div>
         </main>
-    <footer>Created by 
-        <a href="https://github.com/aamabry" target="_blank" >Audrey Mabry
-        </a> and is on <a href="https://github.com/aamabry/nice-weather-app" target="_blank">GitHub
-        </a> and is <a href="https://audreymabry-weather-app.netlify.app/" target="_blank"> hosted on Netlify.</a></footer>
+    <footer>
+        <p>
+            Created by 
+            <a href="https://github.com/aamabry" target="_blank" >Audrey Mabry</a> 
+            and is on <a href="https://github.com/aamabry/nice-weather-app" target="_blank"> GitHub</a> 
+            and is <a href="https://audreymabry-weather-app.netlify.app/" target="_blank"> hosted on Netlify.</a>
+            </p>
+        </footer>
     </div>
 </body>
 </html>
