--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <div class="current-weather">
                 <div>
                     <h1 class="current-city" id="current-city">New York</h1>
-                    <p class="current-details">
-                        <span id="current-date"></span>, sunny
+                    <p class="current-details">, sunny
+                        <span id="current-date"></span>
                         <br />
                         Humidity: <strong>41%</strong>, Wind: <strong>3mp/h</strong>
                     </p>
