--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Weather App</title>
 </head>
 <body>
-    <div class-="weather-app">
+    <div class="weather-app">
         <header>
             <form id="search-form">
                 <input 
@@ -21,8 +21,8 @@
                 id="search-input"/>
             </form>
             <input 
-            type="submit" 
-            value="Search"
+            type="submit"
+            value="search"
             class="search-button"/>
         </form>
         </header>
