--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </form>
             <input 
             type="submit"
-            value="search"
+            value="Search"
             class="search-button"/>
         </form>
         </header>
@@ -31,7 +31,7 @@
                 <div>
                     <h1 class="current-city" id="current-city">New York</h1>
                     <p class="current-details">
-                        <span id="current-date"></span>, sunny
+                        <span id="current-date"></span>sunny
                         <br />
                         Humidity: <strong>41%</strong>, Wind: <strong>3mp/h</strong>
                     </p>
