--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div>
                     <h1 class="current-city" id="current-city">New York</h1>
                     <p class="current-details">
-                        <span id="current-date"></span>Sunny
+                        <span id="current-date">Saturday 1:59</span>, sunny
                         <br />
                         Humidity: <strong>41%</strong>, Wind: <strong>3mp/h</strong>
                     </p>
