--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="weather-app">
         <header>
-            <form id="search-form">
+            <form class="search-form" id="search-form">
                 <input 
                 type="search"
                 placeholder="Enter a city..."
@@ -31,9 +31,10 @@
                 <div>
                     <h1 class="current-city" id="current-city">New York</h1>
                     <p class="current-details">
-                        <span id="current-date">Saturday 1:59</span>, sunny
+                        <span id="time">Saturday 4:00</span>
+                        <span id="description">, sunny</span>
                         <br />
-                        Humidity: <strong>41%</strong>, Wind: <strong>3mp/h</strong>
+                        Humidity: <strong id="humidity">41%</strong>, Wind: <strong id="wind-speed">3mp/h</strong>
                     </p>
                 </div>
                 <div class="current-temperature">
@@ -42,6 +43,7 @@
                     <span class="current-temperature-unit">°F</span>
                 </div>
             </div>
+            <div class="weather-forcast"> </div>
         </main>
     <footer>
         <p>
